can add signed in users for admin sign-up, GET offers & PATCH status in products, add email in profile update, fixing users get by super-admin
