# src/features/products/dto/product-status-response.dto.ts
@@ -1,0 +1,16 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { ProductStatus } from '../enums/product-status.enum';
+
+export class ProductStatusResponseDto {
+  @ApiProperty({ example: '507f1f77bcf86cd799439011' })
+  id: string;
+
+  @ApiProperty({ enum: ProductStatus })
+  status: ProductStatus;
+
+  @ApiProperty()
+  updatedBy: string;
+
+  @ApiProperty()
+  updatedAt: Date;
+}
